[gd_scene load_steps=3 format=3 uid="uid://cudchywmvns5i"]

[ext_resource type="Script" path="res://Menu.gd" id="1_iak7f"]

[sub_resource type="ButtonGroup" id="ButtonGroup_kl4ik"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iak7f")

[node name="NameOption" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -15.5
offset_right = 95.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="LineEditName" type="LineEdit" parent="NameOption"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Choose a name"
caret_blink = true

[node name="Button" type="Button" parent="NameOption"]
layout_mode = 2
text = "Next"

[node name="GameModeOptions" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -92.0
offset_right = 121.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonFFA" type="Button" parent="GameModeOptions"]
layout_mode = 2
text = "Free For All (4 Players)"

[node name="ButtonBR" type="Button" parent="GameModeOptions"]
layout_mode = 2
disabled = true
text = "Battle Royale"

[node name="ModeOptions" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -92.0
offset_right = 121.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonHost" type="Button" parent="ModeOptions"]
layout_mode = 2
text = "Host"

[node name="ButtonJoin" type="Button" parent="ModeOptions"]
layout_mode = 2
text = "Join"

[node name="IPOptions" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -92.0
offset_right = 121.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEditIP" type="LineEdit" parent="IPOptions"]
layout_mode = 2
text = "localhost"

[node name="HBox" type="HBoxContainer" parent="IPOptions"]
layout_mode = 2

[node name="ButtonBack" type="Button" parent="IPOptions/HBox"]
layout_mode = 2
text = "Back"

[node name="ButtonStartJoin" type="Button" parent="IPOptions/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Lobby" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.5
offset_top = -160.0
offset_right = 200.5
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Lobby"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Lobby"

[node name="HSeparator" type="HSeparator" parent="Lobby"]
layout_mode = 2

[node name="PlayersList" type="VBoxContainer" parent="Lobby"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Lobby"]
layout_mode = 2

[node name="Options" type="VBoxContainer" parent="Lobby"]
layout_mode = 2

[node name="Label" type="Label" parent="Lobby/Options"]
layout_mode = 2
text = "World Size"

[node name="SmallWorldType" type="HBoxContainer" parent="Lobby/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Lobby/Options/SmallWorldType"]
layout_mode = 2
size_flags_horizontal = 3
text = "Small"

[node name="CheckButton" type="CheckBox" parent="Lobby/Options/SmallWorldType"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_kl4ik")

[node name="BigWorldType" type="HBoxContainer" parent="Lobby/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Lobby/Options/BigWorldType"]
layout_mode = 2
size_flags_horizontal = 3
text = "Big"

[node name="CheckButton" type="CheckBox" parent="Lobby/Options/BigWorldType"]
layout_mode = 2
button_group = SubResource("ButtonGroup_kl4ik")

[node name="ButtonStart" type="Button" parent="Lobby"]
layout_mode = 2
text = "Start Game"

[connection signal="button_up" from="NameOption/Button" to="." method="on_name_next"]
[connection signal="button_up" from="GameModeOptions/ButtonFFA" to="." method="on_button_ffa_button_up"]
[connection signal="button_up" from="ModeOptions/ButtonHost" to="." method="on_button_host_up"]
[connection signal="button_up" from="ModeOptions/ButtonJoin" to="." method="on_button_join_up"]
[connection signal="button_up" from="IPOptions/HBox/ButtonBack" to="." method="on_button_back_from_join_up"]
[connection signal="button_up" from="IPOptions/HBox/ButtonStartJoin" to="." method="on_button_start_join_up"]
[connection signal="button_up" from="Lobby/ButtonStart" to="." method="on_start_game"]
